working comparison but no submissiong
