# chat-server/src/chat_server/generated/main.py
@@ -1,14 +1,21 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-03-21T18:00:49+00:00
+#   timestamp: 2025-03-23T19:56:08+00:00
 
 from __future__ import annotations
 
-from typing import List, Union
+from typing import List, Optional, Union
 
 from fastapi import FastAPI
 
-from .models import ChatMessage, Error, SubmitChatMessageRequest, Thread
+from .models import (
+    ChatMessage,
+    Error,
+    SubmitChatMessageCompareRequest,
+    SubmitChatMessageRequest,
+    SubmitChatMessageSelectRequest,
+    Thread,
+)
 
 app = FastAPI(
     title='Simple Chat API',
@@ -59,5 +66,35 @@ def submit_chat_message(
 ) -> Union[ChatMessage, Error]:
     """
     Submit a chat message and get a response
+    """
+    pass
+
+
+@app.post(
+    '/thread/{thread_id}/chat/compare',
+    response_model=bytes,
+    responses={'400': {'model': Error}},
+    tags=['Chat'],
+)
+def submit_chat_message_compare(
+    thread_id: str, body: SubmitChatMessageCompareRequest = ...
+) -> Union[bytes, Error]:
+    """
+    Submit a chat message and get a response from another model
+    """
+    pass
+
+
+@app.post(
+    '/thread/{thread_id}/chat/compare/select',
+    response_model=None,
+    responses={'400': {'model': Error}},
+    tags=['Chat'],
+)
+def submit_chat_message_select(
+    thread_id: str, body: SubmitChatMessageSelectRequest = ...
+) -> Optional[Error]:
+    """
+    Submit a chat message selection
     """
     pass
