# chat-server/src/chat_server/llm/openai_models.py
@@ -1,7 +1,6 @@
-from collections.abc import Generator
-from typing import Literal
+from collections.abc import AsyncGenerator
 
-from openai import OpenAI
+from openai import AsyncOpenAI
 from openai.types.chat import (
     ChatCompletionAssistantMessageParam,
     ChatCompletionMessageParam,
@@ -10,10 +9,10 @@ from openai.types.chat import (
 
 from chat_server.generated.models import ChatMessage, Model, Role
 from chat_server.llm.llm import LLM, InvalidMessageRoleError
-
+from chat_server.utils.logging import logger
 
 class OpenAIModels(LLM):
-    def __init__(self, model_name: Literal[Model.gpt_4o_mini, Model.gpt_4o]) -> None:
+    def __init__(self, model_name: Model) -> None:
         self.model_name = model_name.value
 
     def convert_messages(self, messages: list[ChatMessage]) -> list[ChatCompletionMessageParam]:
@@ -38,15 +37,16 @@ class OpenAIModels(LLM):
                 raise InvalidMessageRoleError(invalid_message_role_error)
         return formatted_messages
 
-    def response_generator(self, messages: list[ChatCompletionMessageParam]) -> Generator[str, None, None]:
-        client = OpenAI()
-        response = client.chat.completions.create(
+    async def response_generator(self, messages: list[ChatCompletionMessageParam]) -> AsyncGenerator[str, None]:
+        client = AsyncOpenAI()
+        stream = await client.chat.completions.create(
             model=self.model_name,
             messages=messages,
             stream=True,
         )
-        for chunk in response:
+        async for chunk in stream:
             if chunk.choices[0].finish_reason == "stop":
                 break
             if chunk.choices[0].delta.content:
+                logger.info(f"OPENAI: Received text: {chunk.choices[0].delta.content}")
                 yield chunk.choices[0].delta.content
